--- a/common/lib/esp32-c3-dkc02-bsc/Cargo.toml
+++ b/common/lib/esp32-c3-dkc02-bsc/Cargo.toml
@@ -15,6 +15,10 @@ anyhow = "=1.0.69"
 toml-cfg = "=0.1.3"
 riscv = "=0.10.1"
 ignore = "=0.4.20"
+shtcx = "=0.11.0"
+icm42670 = { version = "=0.1.1", git = "https://github.com/jessebraham/icm42670" }
+embedded-hal = "=0.2.7"
+
 
 [build-dependencies]
 embuild = "0.31.0"
