--- a/intro/hardware-check/Cargo.toml
+++ b/intro/hardware-check/Cargo.toml
@@ -17,14 +17,15 @@ default = ["native"]
 native = ["esp-idf-sys/native"]
 
 [dependencies]
-esp-idf-sys = { version = "=0.31.5", features = ["binstart"] }
-esp-idf-svc = { version = "=0.41.4", features = ["experimental", "alloc"] }
+esp-idf-sys = { version = "=0.32.1", features = ["binstart"] }
+esp-idf-svc = { version = "=0.45.0", features = ["experimental", "alloc"] }
+esp-idf-hal = "=0.40.1"
 esp32-c3-dkc02-bsc = { path = "../../common/lib/esp32-c3-dkc02-bsc" }
-log = "0.4"
-anyhow = "1"
-toml-cfg = "0.1"
-ignore = "=0.4.11"
+log = "=0.4.17"
+anyhow = "=1.0.69"
+toml-cfg = "0.1.3"
+ignore = "0.4.20"
 
 [build-dependencies]
-embuild = "0.28"
-anyhow = "1"
+embuild = "=0.31.0"
+anyhow = "=1.0.69"
