--- a/intro/http-client/Cargo.toml
+++ b/intro/http-client/Cargo.toml
@@ -9,7 +9,7 @@ resolver = "2"
 opt-level = "s"
 
 [profile.dev]
-debug = true # Symbols are nice and they don't increase the size on Flash
+debug = true    # Symbols are nice and they don't increase the size on Flash
 opt-level = "z"
 
 [features]
@@ -17,15 +17,14 @@ default = ["native"]
 native = ["esp-idf-sys/native"]
 
 [dependencies]
-esp-idf-svc = "=0.41.4"
-esp-idf-sys = { version = "=0.31.5", features = ["binstart"] }
+esp-idf-svc = { version = "0.45.0", features = ["experimental", "alloc"] }
+esp-idf-hal = "=0.40.1"
+esp-idf-sys = { version = "=0.32.1", features = ["binstart"] }
 esp32-c3-dkc02-bsc = { path = "../../common/lib/esp32-c3-dkc02-bsc" }
-embedded-svc = "=0.21"
-anyhow = "1.0"
-toml-cfg = "0.1"
-ignore = "=0.4.11"
+embedded-svc = "=0.24.0"
+anyhow = "=1.0.69"
+toml-cfg = "=0.1.3"
 
 [build-dependencies]
-embuild = "0.28"
-anyhow = "1"
-
+embuild = "=0.31.0"
+anyhow = "=1.0.69"
