feat: ✨ Update CI to use the published image if no chnages on the Dockerfile

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -12,9 +12,7 @@ on:
     - cron: "50 7 * * *"
 
 jobs:
-  # To avoid uploading the Docker image to a registry yet
-  # the image is built here & immediately used to test all exercises in.
-  build_image_and_test:
+  build-examples:
     name: Build ${{ matrix.project.name }}
     runs-on: ubuntu-latest
     strategy:
@@ -41,10 +39,21 @@ jobs:
       - name: Checkout the repository
         uses: actions/checkout@v3
 
+      - name: Verify Changed files
+        uses: tj-actions/verify-changed-files@v13
+        id: dockerfile-changed
+        with:
+          files: .devcontainer/Dockerfile
+
       - name: Build Docker image
-        run: docker image build --tag esp --file .devcontainer/Dockerfile .
+        if: steps.dockerfile-changed.outputs.files_changed == 'true'
+        run: docker image build --tag espressif/rust-std-training --file .devcontainer/Dockerfile .
+
+      - name: Pull Docker image
+        if: steps.dockerfile-changed.outputs.files_changed == 'false'
+        run: docker image pull espressif/rust-std-training
 
       - name: Test code example in Docker image
         run: |
           docker run --mount type=bind,source="$(pwd)",target=/workspace,consistency=cached \
-                 --rm esp:latest /bin/bash /workspace/.devcontainer/test.sh ${{ matrix.project.path }}
+                 --rm espressif/rust-std-training:latest /bin/bash /workspace/.devcontainer/test.sh ${{ matrix.project.path }}
