--- a/intro/http-server/Cargo.toml
+++ b/intro/http-server/Cargo.toml
@@ -17,15 +17,15 @@ default = ["native"]
 native = ["esp-idf-sys/native"]
 
 [dependencies]
-esp-idf-sys = { version = "=0.31.5", features = ["binstart"] }
-esp-idf-svc = "=0.41.4"
+esp-idf-sys = { version = "=0.32.1", features = ["binstart"] }
+esp-idf-hal = "=0.40.1"
+esp-idf-svc = { version = "0.45.0", features = ["experimental", "alloc"] }
 esp32-c3-dkc02-bsc = { path = "../../common/lib/esp32-c3-dkc02-bsc" }
-esp32c3 = "=0.4"
-embedded-svc = "=0.21"
-anyhow = "1.0"
-toml-cfg = "0.1"
-ignore = "=0.4.11"
+esp32c3 = "=0.11.0"
+embedded-svc = "=0.24.0"
+anyhow = "=1.0.69"
+toml-cfg = "=0.1.3"
 
 [build-dependencies]
-embuild = "0.28"
-anyhow = "1"
+embuild = "=0.31.0"
+anyhow = "=1.0.69"
