--- a/advanced/button-interrupt/Cargo.toml
+++ b/advanced/button-interrupt/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "button-interrupt"
 version = "0.1.0"
-authors = ["Anatol Ulrich <anatol.ulrich@ferrous-systems.com>", "Tanks Transfeld <tanks.transfeld@ferrous-systems.com>"]
+authors = [
+    "Anatol Ulrich <anatol.ulrich@ferrous-systems.com>",
+    "Tanks Transfeld <tanks.transfeld@ferrous-systems.com>",
+]
 edition = "2021"
 resolver = "2"
 
@@ -9,7 +12,7 @@ resolver = "2"
 opt-level = "s"
 
 [profile.dev]
-debug = true # Symbols are nice and they don't increase the size on Flash
+debug = true    # Symbols are nice and they don't increase the size on Flash
 opt-level = "z"
 
 [features]
@@ -17,10 +20,10 @@ default = ["native"]
 native = ["esp-idf-sys/native"]
 
 [dependencies]
-esp-idf-sys = { version = "=0.31.5", features = ["binstart"] }
-anyhow = "1"
+esp-idf-sys = { version = "=0.32.1", features = ["binstart"] }
+anyhow = "=1.0.69"
 esp32-c3-dkc02-bsc = { path = "../../common/lib/esp32-c3-dkc02-bsc" }
 
 [build-dependencies]
-embuild = "0.28"
-anyhow = "1"
+embuild = "=0.31.0"
+anyhow = "=1.0.69"
