--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -40,17 +40,17 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Verify Changed files
-        uses: tj-actions/verify-changed-files@v13
+        uses: tj-actions/changed-files@v35
         id: dockerfile-changed
         with:
           files: .devcontainer/Dockerfile
 
       - name: Build Docker image
-        if: steps.dockerfile-changed.outputs.files_changed == 'true'
+        if: steps.dockerfile-changed.outputs.any_changed == 'true'
         run: docker image build --tag espressif/rust-std-training --file .devcontainer/Dockerfile .
 
       - name: Pull Docker image
-        if: steps.dockerfile-changed.outputs.files_changed == 'false'
+        if: steps.dockerfile-changed.outputs.any_changed != 'true'
         run: docker image pull espressif/rust-std-training
 
       - name: Test code example in Docker image
