--- a/intro/http-server/Cargo.toml
+++ b/intro/http-server/Cargo.toml
@@ -25,6 +25,8 @@ esp32c3 = "=0.11.0"
 embedded-svc = "=0.24.0"
 anyhow = "=1.0.69"
 toml-cfg = "=0.1.3"
+shtcx = "=0.11.0"
+
 
 [build-dependencies]
 embuild = "=0.31.0"
