--- a/common/lib/get-uuid/Cargo.toml
+++ b/common/lib/get-uuid/Cargo.toml
@@ -6,10 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-toml = "0.5.8"
-anyhow = "1"
+toml = "=0.7.2"
+anyhow = "=1.0.69"
 
 [build-dependencies]
-anyhow = "1"
-uuid = { version = "0.8", features = ["v4"] }
-toml = "0.5"
+anyhow = "=1.0.69"
+uuid = { version = "=1.3.0", features = ["v4"] }
+toml = "=0.7.2"
