--- a/advanced/i2c-driver/Cargo.toml
+++ b/advanced/i2c-driver/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "i2c-driver-exercise"
 version = "0.1.0"
-authors = ["Tanks Transfeld <tanks.transfeld@ferrous-systems.com>"]
+authors = [
+    "Tanks Transfeld <tanks.transfeld@ferrous-systems.com>",
+    "Sergio Gasquez <sergio.gasquez@gmail.com>",
+]
 edition = "2021"
 resolver = "2"
 
@@ -9,7 +12,7 @@ resolver = "2"
 opt-level = "s"
 
 [profile.dev]
-debug = true # Symbols are nice and they don't increase the size on Flash
+debug = true    # Symbols are nice and they don't increase the size on Flash
 opt-level = "z"
 
 [features]
