--- a/common/lib/icm42670p/Cargo.toml
+++ b/common/lib/icm42670p/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
 name = "icm42670p"
 version = "0.1.0"
-authors = ["Tanks Transfeld <tanks.transfeld@ferrous-systems.com>"]
+authors = [
+    "Tanks Transfeld <tanks.transfeld@ferrous-systems.com>",
+    "Sergio Gasquez <sergio.gasquez@gmail.com>",
+]
 edition = "2021"
 
 
-
-
 [dependencies]
-embedded-hal = "0.2.7"
+embedded-hal = "=0.2.7"
