--- a/advanced/i2c-sensor-reading/Cargo.toml
+++ b/advanced/i2c-sensor-reading/Cargo.toml
@@ -20,16 +20,15 @@ default = ["native"]
 native = ["esp-idf-sys/native"]
 
 [dependencies]
-esp-idf-sys = { version = "=0.31.5", features = ["binstart"] }
-esp-idf-hal = "=0.38"
-anyhow = "1"
-embedded-hal = "0.2.7"
-shtcx = "0.10.0"
-lis3dh = "0.4.1"
-shared-bus = "0.2.4"
+esp-idf-sys = { version = "=0.32.1", features = ["binstart"] }
+esp-idf-hal = "=0.40.1"
+anyhow = "=1.0.69"
+embedded-hal = "=0.2.7"
+shtcx = "=0.11.0"
+lis3dh = "=0.4.2"
+shared-bus = "=0.2.5"
 icm42670p = { path = "../../common/lib/icm42670p" }
-ignore = "=0.4.11"
 
 [build-dependencies]
-embuild = "0.28"
-anyhow = "1"
+embuild = "=0.31.0"
+anyhow = "=1.0.69"
