--- a/intro/mqtt/exercise/Cargo.toml
+++ b/intro/mqtt/exercise/Cargo.toml
@@ -20,17 +20,20 @@ default = ["native"]
 native = ["esp-idf-sys/native"]
 
 [dependencies]
+esp-idf-hal = "=0.40.1"
+embedded-svc = "=0.24.0"
 esp-idf-sys = { version = "=0.32.1", features = ["binstart"] }
 esp-idf-svc = { version = "=0.45.0", features = ["experimental", "alloc"] }
-embedded-svc = "=0.24.0"
 esp32-c3-dkc02-bsc = { path = "../../../common/lib/esp32-c3-dkc02-bsc" }
 log = "=0.4.17"
 anyhow = "=1.0.69"
-toml-cfg = "=0.1.3"
+toml-cfg = "0.1.0"
 esp32c3 = "=0.11.0"
 riscv = { version = "=0.10.1" }
 get-uuid = { path = "../../../common/lib/get-uuid" }
 mqtt-messages = { path = "../../../common/lib/mqtt-messages" }
+shtcx = "=0.11.0"
+
 
 [build-dependencies]
 embuild = "=0.31.0"
