--- a/advanced/button-interrupt/Cargo.toml
+++ b/advanced/button-interrupt/Cargo.toml
@@ -24,6 +24,7 @@ native = ["esp-idf-sys/native"]
 esp-idf-sys = { version = "=0.32.1", features = ["binstart"] }
 anyhow = "=1.0.69"
 esp32-c3-dkc02-bsc = { path = "../../common/lib/esp32-c3-dkc02-bsc" }
+esp-idf-hal = "=0.40.1"
 
 [build-dependencies]
 embuild = "=0.31.0"
