--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -2,7 +2,10 @@
 name: CI
 
 on:
-  push: {}
+  push:
+    paths-ignore:
+      - "book/"
+      - "book/**"
   pull_request:
     branches: [main]
     paths-ignore:
