--- a/advanced/i2c-driver/Cargo.toml
+++ b/advanced/i2c-driver/Cargo.toml
@@ -20,12 +20,11 @@ default = ["native"]
 native = ["esp-idf-sys/native"]
 
 [dependencies]
-esp-idf-sys = { version = "=0.31.5", features = ["binstart"] }
-esp-idf-hal = "=0.38"
-anyhow = "1"
-embedded-hal = "0.2.7"
-ignore = "=0.4.11"
+esp-idf-sys = { version = "=0.32.1", features = ["binstart"] }
+esp-idf-hal = "=0.40.1"
+anyhow = "=1.0.69"
+embedded-hal = "=0.2.7"
 
 [build-dependencies]
-embuild = "0.28"
-anyhow = "1"
+embuild = "=0.31.0"
+anyhow = "=1.0.69"
