style: 🎨 Rename i2c exercises in cargo.toml

--- a/advanced/i2c-driver/Cargo.toml
+++ b/advanced/i2c-driver/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "i2c-driver-exercise"
+name = "i2c-driver"
 version = "0.1.0"
 authors = [
     "Tanks Transfeld <tanks.transfeld@ferrous-systems.com>",
