--- a/intro/http-client/Cargo.toml
+++ b/intro/http-client/Cargo.toml
@@ -23,7 +23,7 @@ native = ["esp-idf-sys/native"]
 esp-idf-svc = { version = "0.45.0", features = ["experimental", "alloc"] }
 esp-idf-hal = "=0.40.1"
 esp-idf-sys = { version = "=0.32.1", features = ["binstart"] }
-esp32-c3-dkc02-bsc = { path = "../../common/lib/esp32-c3-dkc02-bsc" }
+wifi = { path = "../../common/lib/wifi" }
 embedded-svc = "=0.24.0"
 anyhow = "=1.0.69"
 toml-cfg = "=0.1.3"
