--- a/intro/mqtt/exercise/Cargo.toml
+++ b/intro/mqtt/exercise/Cargo.toml
@@ -24,8 +24,8 @@ esp-idf-hal = "=0.40.1"
 embedded-svc = "=0.24.0"
 esp-idf-sys = { version = "=0.32.1", features = ["binstart"] }
 esp-idf-svc = { version = "=0.45.0", features = ["experimental", "alloc"] }
-rgb-led = { path = "../../common/lib/rgb-led" }
-wifi = { path = "../../common/lib/wifi" }
+rgb-led = { path = "../../../common/lib/rgb-led" }
+wifi = { path = "../../../common/lib/wifi" }
 log = "=0.4.17"
 anyhow = "=1.0.69"
 toml-cfg = "0.1.0"
