--- a/intro/hardware-check/Cargo.toml
+++ b/intro/hardware-check/Cargo.toml
@@ -27,8 +27,9 @@ rgb-led = { path = "../../common/lib/rgb-led" }
 wifi = { path = "../../common/lib/wifi" }
 log = "=0.4.17"
 anyhow = "=1.0.69"
-toml-cfg = "0.1.3"
+toml-cfg = "=0.1.3"
 
 [build-dependencies]
 embuild = "=0.31.0"
 anyhow = "=1.0.69"
+toml-cfg = "=0.1.3"
