--- a/intro/mqtt/exercise/Cargo.toml
+++ b/intro/mqtt/exercise/Cargo.toml
@@ -28,7 +28,7 @@ rgb-led = { path = "../../../common/lib/rgb-led" }
 wifi = { path = "../../../common/lib/wifi" }
 log = "=0.4.17"
 anyhow = "=1.0.69"
-toml-cfg = "0.1.0"
+toml-cfg = "=0.1.3"
 get-uuid = { path = "../../../common/lib/get-uuid" }
 mqtt-messages = { path = "../../../common/lib/mqtt-messages" }
 shtcx = "=0.11.0"
@@ -37,4 +37,4 @@ shtcx = "=0.11.0"
 [build-dependencies]
 embuild = "=0.31.0"
 anyhow = "=1.0.69"
-toml-cfg = "0.1"
+toml-cfg = "=0.1.3"
