--- a/common/lib/get-uuid/Cargo.toml
+++ b/common/lib/get-uuid/Cargo.toml
@@ -1,15 +1,18 @@
 [package]
 name = "get-uuid"
 version = "0.1.0"
+authors = [
+    "Anatol Ulrich <anatol.ulrich@ferrous-systems.com>",
+    "Sergio Gasquez <sergio.gasquez@gmail.com>",
+]
 edition = "2021"
-
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-toml = "=0.5.11"
 anyhow = "=1.0.69"
+toml = "=0.5.11"
 
 [build-dependencies]
 anyhow = "=1.0.69"
-uuid = { version = "=1.3.0", features = ["v4"] }
 toml = "=0.5.11"
+uuid = { version = "=1.3.0", features = ["v4"] }
