--- a/intro/mqtt/host-client/Cargo.toml
+++ b/intro/mqtt/host-client/Cargo.toml
@@ -1,11 +1,15 @@
 [package]
 name = "host-client"
 version = "0.1.0"
+authors = [
+    "Anatol Ulrich <anatol.ulrich@ferrous-systems.com>",
+    "Sergio Gasquez <sergio.gasquez@gmail.com>",
+]
 edition = "2021"
 
 [dependencies]
-rumqttc = "=0.20.0"
-rand = "=0.8.5"
-toml-cfg = "=0.1.3"
 get-uuid = { path = "../../../common/lib/get-uuid" }
 mqtt-messages = { path = "../../../common/lib/mqtt-messages" }
+rand = "=0.8.5"
+rumqttc = "=0.20.0"
+toml-cfg = "=0.1.3"
