--- a/common/lib/rgb-led/Cargo.toml
+++ b/common/lib/rgb-led/Cargo.toml
@@ -7,7 +7,7 @@ authors = ["Sergio Gasquez <sergio.gasquez@gmail.com>"]
 [dependencies]
 anyhow = "=1.0.69"
 esp-idf-hal = "=0.40.1"
-esp-idf-sys = { version = "=0.32.1" }
+esp-idf-sys = "=0.32.1"
 log = "=0.4.17"
 rgb = "=0.8.36"
 
