--- a/common/lib/rgb-led/Cargo.toml
+++ b/common/lib/rgb-led/Cargo.toml
@@ -5,17 +5,17 @@ edition = "2021"
 authors = ["Sergio Gasquez <sergio.gasquez@gmail.com>"]
 
 [dependencies]
-esp-idf-sys = { version = "=0.32.1" }
-esp-idf-hal = "=0.40.1"
-rgb = "=0.8.36"
-log = "=0.4.17"
 anyhow = "=1.0.69"
+esp-idf-hal = "=0.40.1"
+esp-idf-sys = "=0.32.1"
+log = "=0.4.17"
+rgb = "=0.8.36"
 
 [build-dependencies]
-embuild = "0.31.0"
 anyhow = "=1.0.69"
+embuild = "0.31.0"
 
 [dev-dependencies]
 anyhow = "=1.0.69"
-esp-idf-sys = { version = "=0.32.1", features = ["native", "binstart"] }
 esp-idf-svc = { version = "=0.45.0", features = ["experimental", "alloc"] }
+esp-idf-sys = { version = "=0.32.1", features = ["native", "binstart"] }
