--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -11,8 +11,7 @@ ARG ESP_BOARD=esp32c3
 
 RUN apt-get update \
     && apt-get install -y git curl ninja-build llvm-dev libclang-dev \
-    clang unzip python3 python3-pip pkg-config \
-    libssl-dev \ 
+    clang unzip python3 python3-pip pkg-config libssl-dev \
     && apt-get clean -y \
     && rm -rf /var/lib/apt/lists/* /tmp/library-scripts
 
