Add cargo-generate, clippy and depdencies (#162)
* Add cargo-generate, clippy and depdencies

* Update docker file

* Update .devcontainer/Dockerfile

---------

Co-authored-by: Sergio Gasquez Arcos <sergio.gasquez@gmail.com>

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -11,7 +11,7 @@ ARG ESP_BOARD=esp32c3
 
 RUN apt-get update \
     && apt-get install -y git curl ninja-build llvm-dev libclang-dev \
-    clang unzip python3 python3-pip pkg-config \
+    clang unzip python3 python3-pip pkg-config libssl-dev \
     && apt-get clean -y \
     && rm -rf /var/lib/apt/lists/* /tmp/library-scripts
 
@@ -19,7 +19,9 @@ ENV PATH=${PATH}:$HOME/.cargo/bin
 
 RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- \
     --default-toolchain ${NIGHTLY_VERSION} -y --profile minimal \
-    --component rust-src
+    --component rust-src,clippy
+
+RUN $HOME/.cargo/bin/cargo install cargo-generate
 
 RUN ARCH=$($HOME/.cargo/bin/rustup show | grep "Default host" | sed -e 's/.* //') && \
     curl -L "https://github.com/esp-rs/espflash/releases/latest/download/cargo-espflash-${ARCH}.zip" -o "${HOME}/.cargo/bin/cargo-espflash.zip" && \
