--- a/common/lib/wifi/Cargo.toml
+++ b/common/lib/wifi/Cargo.toml
@@ -18,5 +18,5 @@ embuild = "0.31.0"
 
 [dev-dependencies]
 anyhow = "1"
-esp-idf-sys = { version = "0.32", features = ["native", "binstart"] }
+esp-idf-sys = { version = "=0.32.1", features = ["native", "binstart"] }
 toml-cfg = "=0.1.3"
