ci: ⚡️ Update permisions

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -48,19 +48,20 @@ jobs:
 
       - name: Build Docker image
         if: github.event_name != 'schedule'
-        run: docker image build --tag espressif/rust-std-training --file .devcontainer/Dockerfile .
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          tags: espressif/rust-std-training
+          file: .devcontainer/Dockerfile
+          push: false
 
       - name: Pull Docker image
         if: github.event_name == 'schedule'
         run: docker image pull espressif/rust-std-training
 
-      - name: Run the build process with Docker
+      - name: Test code example in Docker image
         uses: addnab/docker-run-action@v3
         with:
           image: espressif/rust-std-training:latest
           options: -u esp -v ${{ github.workspace }}:/home/esp/workspace
           run: /bin/bash /home/esp/workspace/.devcontainer/test.sh ${{ matrix.project.path }}
-      # - name: Test code example in Docker image
-      #   run: |
-      #     docker run -u esp --mount type=bind,source="$(pwd)",target=/home/esp/workspace,consistency=cached \
-      #            --rm espressif/rust-std-training:latest /bin/bash /home/esp/workspace/.devcontainer/test.sh ${{ matrix.project.path }}
