--- a/common/lib/wifi/Cargo.toml
+++ b/common/lib/wifi/Cargo.toml
@@ -13,10 +13,10 @@ esp-idf-sys = "=0.32.1"
 log = "=0.4.17"
 
 [build-dependencies]
-anyhow = "1"
-embuild = "0.31.0"
+anyhow = "=1.0.69"
+embuild = "=0.31.1"
 
 [dev-dependencies]
-anyhow = "1"
+anyhow = "=1.0.69"
 esp-idf-sys = { version = "=0.32.1", features = ["native", "binstart"] }
 toml-cfg = "=0.1.3"
