--- a/intro/http-client/wokwi.toml
+++ b/intro/http-client/wokwi.toml
@@ -1,13 +1,9 @@
 [wokwi]
 version = 1
-# # Exercise
+# Exercise
 firmware = 'target/riscv32imc-esp-espidf/debug/http-client'
 elf = 'target/riscv32imc-esp-espidf/debug/http-client'
 
 # Solution - HTTP
 # firmware = 'target/riscv32imc-esp-espidf/debug/examples/http_client'
 # elf = 'target/riscv32imc-esp-espidf/debug/examples/http_client'
-
-# Solution - HTTPS
-# firmware = 'target/riscv32imc-esp-espidf/debug/examples/https_client'
-# elf = 'target/riscv32imc-esp-espidf/debug/examples/https_client'
