--- a/common/lib/wifi/Cargo.toml
+++ b/common/lib/wifi/Cargo.toml
@@ -6,12 +6,11 @@ authors = ["Sergio Gasquez <sergio.gasquez@gmail.com>"]
 
 [dependencies]
 anyhow = "=1.0.75"
-esp-idf-svc = { version = "=0.47.3", features = ["experimental", "alloc"] }
+esp-idf-svc = { version = "=0.47.3", features = ["nightly"] }
 log = "=0.4.20"
 
 [build-dependencies]
 embuild = "=0.31.4"
 
 [dev-dependencies]
-anyhow = "=1.0.75"
 toml-cfg = "=0.1.3"
