Add VS Code Wokwi files and Wokwi.com projects (#214)
* feat: Add Wokwi files

* ci: Simulate projects

* feat: Update default SSID

* ci: Add wokwi.com checks

* ci: Update conditions

* ci: Update name

* ci: Fix image

* ci: Remove source commadn

* ci: Update path

* build: Update deps and rust components

* chore: Update SSID for Wokwi simulation

* chore: Debug wokwi.toml

* ci: Update conditions

* feat: Add wokwi vscode extension

* feat: Update Wokwi files

* docs: Add simulation documentation

* ci: Update path

* feat: Add button pressed message

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,12 +7,13 @@ on:
       - "book/"
       - "book/**"
       - "**/README.md"
+      - ".github/workflows/wokwi_projects.yml"
   pull_request:
-    branches: [main]
     paths-ignore:
       - "book/"
       - "book/**"
       - "**/README.md"
+      - ".github/workflows/wokwi_projects.yml"
   schedule:
     - cron: "50 7 * * *"
 
@@ -67,3 +68,13 @@ jobs:
           image: espressif/rust-std-training:latest
           options: -u esp -v ${{ github.workspace }}:/home/esp/workspace
           run: /bin/bash /home/esp/workspace/.devcontainer/test.sh ${{ matrix.project.path }}
+
+      - name: Wokwi CI check
+        if: matrix.project.name == 'button-interrupt' || matrix.project.name == 'http-client' || matrix.project.name == 'hardware-check'
+        uses: wokwi/wokwi-ci-action@v1
+        with:
+          token: ${{ secrets.WOKWI_CLI_TOKEN }}
+          path: ${{ matrix.project.path }}
+          timeout: 30000
+          scenario: ${{ github.workspace }}/.github/${{ matrix.project.name }}.test.yaml
+          fail_text: 'Error'
