--- a/advanced/button-interrupt/Cargo.toml
+++ b/advanced/button-interrupt/Cargo.toml
@@ -3,8 +3,8 @@ name = "button-interrupt"
 version = "0.1.0"
 authors = [
     "Anatol Ulrich <anatol.ulrich@ferrous-systems.com>",
-    "Tanks Transfeld <tanks.transfeld@ferrous-systems.com>",
     "Sergio Gasquez <sergio.gasquez@gmail.com>",
+    "Tanks Transfeld <tanks.transfeld@ferrous-systems.com>",
 ]
 edition = "2021"
 resolver = "2"
@@ -13,19 +13,13 @@ resolver = "2"
 opt-level = "s"
 
 [profile.dev]
-debug = true    # Symbols are nice and they don't increase the size on Flash
+debug     = true # Symbols are nice and they don't increase the size on Flash
 opt-level = "z"
 
-[features]
-default = ["native"]
-native = ["esp-idf-sys/native"]
-
 [dependencies]
-anyhow = "=1.0.71"
-esp-idf-hal = "=0.41.1"
-esp-idf-sys = { version = "=0.33.0", features = ["binstart"] }
-rgb-led = { path = "../../common/lib/rgb-led" }
+anyhow      = "=1.0.75"
+esp-idf-svc = "=0.47.3"
+rgb-led     = { path = "../../common/lib/rgb-led" }
 
 [build-dependencies]
-anyhow = "=1.0.71"
-embuild = "=0.31.2"
+embuild = "=0.31.4"
