--- a/intro/hardware-check/Cargo.toml
+++ b/intro/hardware-check/Cargo.toml
@@ -12,24 +12,17 @@ resolver = "2"
 opt-level = "s"
 
 [profile.dev]
-debug = true    # Symbols are nice and they don't increase the size on Flash
+debug     = true # Symbols are nice and they don't increase the size on Flash
 opt-level = "z"
 
-[features]
-default = ["native"]
-native = ["esp-idf-sys/native"]
-
 [dependencies]
-anyhow = "=1.0.71"
-esp-idf-hal = "=0.41.1"
-esp-idf-svc = { version = "=0.46.0", features = ["experimental", "alloc"] }
-esp-idf-sys = { version = "=0.33.0", features = ["binstart"] }
-log = "=0.4.18"
-rgb-led = { path = "../../common/lib/rgb-led" }
-toml-cfg = "=0.1.3"
-wifi = { path = "../../common/lib/wifi" }
+anyhow      = "=1.0.75"
+esp-idf-svc = "=0.47.3"
+log         = "=0.4.20"
+rgb-led     = { path = "../../common/lib/rgb-led" }
+toml-cfg    = "=0.1.3"
+wifi        = { path = "../../common/lib/wifi" }
 
 [build-dependencies]
-anyhow = "=1.0.71"
-embuild = "=0.31.2"
+embuild  = "=0.31.4"
 toml-cfg = "=0.1.3"
