--- a/intro/mqtt/exercise/Cargo.toml
+++ b/intro/mqtt/exercise/Cargo.toml
@@ -12,28 +12,21 @@ resolver = "2"
 opt-level = "s"
 
 [profile.dev]
-debug = true    # Symbols are nice and they don't increase the size on Flash
+debug     = true # Symbols are nice and they don't increase the size on Flash
 opt-level = "z"
 
-[features]
-default = ["native"]
-native = ["esp-idf-sys/native"]
-
 [dependencies]
-anyhow = "=1.0.71"
-embedded-svc = "=0.25.0"
-esp-idf-hal = "=0.41.1"
-esp-idf-svc = { version = "=0.46.0", features = ["experimental", "alloc"] }
-esp-idf-sys = { version = "=0.33.0", features = ["binstart"] }
-get-uuid = { path = "../../../common/lib/get-uuid" }
-log = "=0.4.18"
+anyhow        = "=1.0.75"
+embedded-svc  = "=0.26.4"
+esp-idf-svc   = "=0.47.3"
+get-uuid      = { path = "../../../common/lib/get-uuid" }
+log           = "=0.4.20"
 mqtt-messages = { path = "../../../common/lib/mqtt-messages" }
-rgb-led = { path = "../../../common/lib/rgb-led" }
-shtcx = "=0.11.0"
-toml-cfg = "=0.1.3"
-wifi = { path = "../../../common/lib/wifi" }
+rgb-led       = { path = "../../../common/lib/rgb-led" }
+shtcx         = "=0.11.0"
+toml-cfg      = "=0.1.3"
+wifi          = { path = "../../../common/lib/wifi" }
 
 [build-dependencies]
-anyhow = "=1.0.71"
-embuild = "=0.31.2"
+embuild  = "=0.31.4"
 toml-cfg = "=0.1.3"
